--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        <nav>
+        </nav>
     </header>
+
     <div class="hero"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+
+    <section class="contents">
+        <div id="search-engine-optimization" class="content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -35,7 +37,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" class="content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -44,7 +46,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="content">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -53,9 +55,10 @@
                 increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    </section>
+
+    <section class="benefits">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -63,7 +66,7 @@
                 to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -71,7 +74,7 @@
                 for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -79,7 +82,8 @@
                 need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
+    
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
